# Video_Conference_4k

./: README.md  pyproject.toml  readme.md
capture/: video.py
conference/: __init__.py  multipeer.py
examples/: test_pyside6_webrtc.py  test_pyside6_zmq.py
net/: __init__.py  async_.py  sync.py
rtc/: connection.py  tracks.py
stream/: __init__.py
utils/: __init__.py  common.py  nvidia_codec.py
videoconference4k/: __init__.py  compiled_files.txt  get_project_scripts.py  remove_whitespaces.py  settings.yaml
videoconference4k/capture/: __init__.py  audio.py  jitter.py  video.py
videoconference4k/codec/: __init__.py  base.py  factory.py  intel.py  jpeg.py  nvidia.py  opus.py  software.py
videoconference4k/conference/: __init__.py  base.py  direct.py  multipeer.py  peer.py
videoconference4k/net/: __init__.py  async_.py  audio.py  base.py  compression.py  sync.py  upnp.py
videoconference4k/rtc/: __init__.py  connection.py  tracks.py
videoconference4k/signaling/: __init__.py  __main__.py  server.py
videoconference4k/stream/: video.py
videoconference4k/utils/: __init__.py  auth.py  common.py  cv.py  ffmpeg.py  intel_codec.py  nvidia_codec.py  software_codec.py
